--- a/root/css/stylesheet.css
+++ b/root/css/stylesheet.css
@@ -14,6 +14,22 @@
   font-weight: normal;
 }
 
+a:link {
+  text-decoration: none;
+}
+
+a:visited {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+a:active {
+  text-decoration: underline;
+}
+
 #textarea {
   font-family: Ubuntu, monospace;
   font-size: 1em;
