Fixed monospace fornt rendering
Realized that the font wasn't monospaced at all so now we make sure that
this is the case.

--- a/root/css/stylesheet.css
+++ b/root/css/stylesheet.css
@@ -11,9 +11,10 @@
 }
 
 @font-face {
-  font-family: "Courier New", Courier, monospace
+  font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
   font-weight: normal;
 }
+
 
 a:link {
   text-decoration: none;
@@ -32,7 +33,7 @@ a:active {
 }
 
 #textarea {
-  font-family: Ubuntu, monospace;
+  font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
   font-size: 1em;
   background-color: rgba(0,0,0, 0.3);
   width: 100%;
