--- a/root/css/stylesheet.css
+++ b/root/css/stylesheet.css
@@ -18,14 +18,17 @@
 
 a:link {
   text-decoration: none;
+  color: #5781b0;
 }
 
 a:visited {
   text-decoration: none;
+  color: #5781b0;
 }
 
 a:hover {
   text-decoration: underline;
+  color: #5781b0;
 }
 
 a:active {
