--- a/root/css/stylesheet.css
+++ b/root/css/stylesheet.css
@@ -15,6 +15,13 @@
   font-weight: normal;
 }
 
+.footer {
+  position: absolute;
+
+  bottom: 0;
+  right: 0;
+  padding: 1em;
+}
 
 a:link {
   text-decoration: none;
